# investment-comic-gemini

./: CHANGELOG.md  README.md  README_VIDEO_TRACK.md  REVIEW_US_WORLD_BUILDING_2026-04-18.md  pyproject.toml  requirements-video.txt  requirements.txt
.github/workflows/: ci.yml  generate_ref_images.yml  migrate_ref_images.yml  publish_sns.yml  resume_episode.yml  run_market.yml  run_video_trailer.yml
.ruff_cache/0.15.11/: 5260138088771213759
config/: characters.yaml
config/actions/: video_teaser_launch_plan.yaml
docs/: LOG_ADVANCEMENT_ANALYSIS_DESIGN_2026-04-20.md  MAIL_SECRETARY_EXECUTION_MASTER_PLAN_2026-04-27.md  MAIL_SECRETARY_OPERATION_HANDOFF_PLAYBOOK_2026-04-27.md  MAIL_SECRETARY_PARALLEL_DESIGN_2026-04-27.md  MARKET_STORYLINE_DEDUP_ANALYSIS_DESIGN_2026-04-20.md  VIDEO_NEWS_HERO_VILLAIN_TEASER_24S.md  VIDEO_PAID_TELEGRAM_MANUAL_8x3_ROLLOUT_PLAN_2026-04-20.md  VIDEO_PREOP_MANUAL_PROMPT_OPERATION_DESIGN_2026-04-20.md  VIDEO_TRAILER_WORKFLOW_ADVANCEMENT_ANALYSIS_DESIGN_2026-04-20.md
engine/: __init__.py
scripts/: analyze_logs.py  generate_ref_images.py  migrate_ref_images.py  notify_failure.py  resolve_episode.py  run_market.py  run_market_step3_story.py  run_publish.py  run_resume.py  run_video_trailer.py
tests/: conftest.py  test_asset_writer.py  test_battle_alliance.py  test_battle_calc.py  test_character_engine_icg.py  test_integration_scenarios.py  test_logger.py  test_no_battle.py  test_pil_composer.py  test_prompt_tpl.py  test_ref_loader.py  test_scenario_selector.py  test_schema.py  test_story_state_manager_icg.py  test_storyline_guard.py
(+74 files in other folders)
